projeto explicando github

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <h2>GitHub</h2>
     <hr>
-<img src="img/github-768x384.png" alt="">
+<a target="_blank" href="https://github.com/"><img src="img/github-768x384.png" alt="GitHUb"></a>
 <br>
 <p><u>GitHub</u> é uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git. Ele permite que programadores, utilitários ou qualquer usuário cadastrado na plataforma contribuam em projetos privados e/ou Open Source de qualquer lugar do mundo.</p>
 
